// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`compileRestore [mysql] should compile restore with simple criteria 1`] = `
{
  "params": [
    "abc-123",
  ],
  "text": "UPDATE \`app\`.\`users\` AS \`t0\` SET \`deleted_at\` = NULL WHERE \`t0\`.\`id\` = ?",
}
`;

exports[`compileRestore [postgres] should compile restore with simple criteria 1`] = `
{
  "params": [
    "abc-123",
  ],
  "text": "UPDATE "app"."users" AS "t0" SET "deleted_at" = NULL WHERE "t0"."id" = $1",
}
`;

exports[`compileRestore [sqlite] should compile restore with simple criteria 1`] = `
{
  "params": [
    "abc-123",
  ],
  "text": "UPDATE "users" SET "deleted_at" = NULL WHERE "id" = ?",
}
`;

exports[`compileSoftDelete [mysql] should compile soft delete with multiple criteria 1`] = `
{
  "params": [
    "Alice",
    "abc",
  ],
  "text": "UPDATE \`app\`.\`users\` AS \`t0\` SET \`deleted_at\` = NOW(3) WHERE (\`t0\`.\`name\` = ? AND \`t0\`.\`id\` = ?)",
}
`;

exports[`compileSoftDelete [mysql] should compile soft delete with simple criteria 1`] = `
{
  "params": [
    "abc-123",
  ],
  "text": "UPDATE \`app\`.\`users\` AS \`t0\` SET \`deleted_at\` = NOW(3) WHERE \`t0\`.\`id\` = ?",
}
`;

exports[`compileSoftDelete [postgres] should compile soft delete with multiple criteria 1`] = `
{
  "params": [
    "Alice",
    "abc",
  ],
  "text": "UPDATE "app"."users" AS "t0" SET "deleted_at" = NOW() WHERE ("t0"."name" = $1 AND "t0"."id" = $2)",
}
`;

exports[`compileSoftDelete [postgres] should compile soft delete with simple criteria 1`] = `
{
  "params": [
    "abc-123",
  ],
  "text": "UPDATE "app"."users" AS "t0" SET "deleted_at" = NOW() WHERE "t0"."id" = $1",
}
`;

exports[`compileSoftDelete [sqlite] should compile soft delete with multiple criteria 1`] = `
{
  "params": [
    "Alice",
    "abc",
  ],
  "text": "UPDATE "users" SET "deleted_at" = strftime('%Y-%m-%dT%H:%M:%fZ','now') WHERE ("name" = ? AND "id" = ?)",
}
`;

exports[`compileSoftDelete [sqlite] should compile soft delete with simple criteria 1`] = `
{
  "params": [
    "abc-123",
  ],
  "text": "UPDATE "users" SET "deleted_at" = strftime('%Y-%m-%dT%H:%M:%fZ','now') WHERE "id" = ?",
}
`;

exports[`compileSoftDelete dialect-specific: alias behavior mysql: uses AS t0 alias (supportsUpdateAlias = true) 1`] = `
{
  "params": [
    "abc",
  ],
  "text": "UPDATE \`app\`.\`users\` AS \`t0\` SET \`deleted_at\` = NOW(3) WHERE \`t0\`.\`id\` = ?",
}
`;

exports[`compileSoftDelete dialect-specific: alias behavior postgres: uses AS t0 alias (supportsUpdateAlias = true) 1`] = `
{
  "params": [
    "abc",
  ],
  "text": "UPDATE "app"."users" AS "t0" SET "deleted_at" = NOW() WHERE "t0"."id" = $1",
}
`;

exports[`compileSoftDelete dialect-specific: alias behavior sqlite: no alias (supportsUpdateAlias = false) 1`] = `
{
  "params": [
    "abc",
  ],
  "text": "UPDATE "users" SET "deleted_at" = strftime('%Y-%m-%dT%H:%M:%fZ','now') WHERE "id" = ?",
}
`;

exports[`compileSoftDelete dialect-specific: namespace/schema postgres: no schema when namespace is null 1`] = `
{
  "params": [
    "abc",
  ],
  "text": "UPDATE "users" AS "t0" SET "deleted_at" = NOW() WHERE "t0"."id" = $1",
}
`;
